--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,7 @@
- <nav>
+ <nav> // Your Navbar with the links you want to show
     <a routerLink="/home/firstblock">FirstBlock</a>
     <a routerLink="/home/secondblock" >SecondBlock</a>
   </nav>
-  <router-outlet></router-outlet>
+
+  <router-outlet></router-outlet> //here the correspoding component is loaded on the basis on the routes.
+  
